# dbt-baby-sugar

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: sugar-review.md  test.md
.claude/skills/sugar-code-review/: SKILL.md
.github/workflows/: ci_pr.yml  dbt-compat.yml
dbt_baby_sugar/: __init__.py
dbt_baby_sugar/activation/: activation.py
dbt_baby_sugar/core/: manifest.py  model_run.py  node_status.py  run_phase.py  run_state.py  run_summary.py
dbt_baby_sugar/events/: event_handler.py
dbt_baby_sugar/ui/app/: app.py  app_driver.py  confirm_cancel.py  threadsafe_driver.py
dbt_baby_sugar/ui/capture/: stdout_capture.py
dbt_baby_sugar/ui/mascot/: face_mascot.py  mascot_mood.py
dbt_baby_sugar/ui/overview/: overview.py
tests/integration/: test_real_run.py
tests/integration/fixture_project/: dbt_project.yml  profiles.yml
tests/integration/fixture_project/models/: fct_orders.sql  stg_orders.sql
tests/integration/fixture_project/seeds/: raw_orders.csv
tests/unit/: conftest.py
tests/unit/activation/: test_activation.py  test_build_handler.py
tests/unit/core/: test_manifest.py  test_node_status.py  test_run_state.py  test_run_summary.py
tests/unit/events/: test_event_handler.py
tests/unit/ui/: conftest.py
tests/unit/ui/app/: test_app.py  test_app_driver.py  test_confirm_cancel.py  test_threadsafe_driver.py
tests/unit/ui/capture/: test_stdout_capture.py
tests/unit/ui/mascot/: test_face_mascot.py  test_mascot_mood.py
tests/unit/ui/overview/: test_overview.py
